<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="detail">Detail</string>
    <string name="settings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="true">Refresh</string>
    <string name="action_map" translatable="true">Map</string>
    <string name="action_share" translatable="true">Share</string>

    <string name="prefs_search_category" translatable="true">Search Options</string>
    <string name="prefs_location_title" translatable="true">Location</string>
    <string name="prefs_location_key" translatable="false">prefs_location</string>
    <string name="prefs_location_value_default" translatable="false">3451190</string>

    <string name="prefs_unit_tittle" translatable="true">Temperature Units</string>
    <string name="prefs_unit_key" translatable="false">prefs_temperature</string>
    <string name="pref_unit_value_imperial" translatable="false">imperial</string>
    <string name="pref_unit_value_metric" translatable="false">metric</string>
    <string name="pref_unit_label_imperial" translatable="true">Imperial</string>
    <string name="pref_unit_label_metric" translatable="true">Metrics</string>
    <string name="prefs_unit_value_default" translatable="false">@string/pref_unit_value_metric</string>

</resources>
